first working commit, fixes all errors encountered so far

--- a/settings.html
+++ b/settings.html
@@ -9,7 +9,7 @@
       <table class="form-table">
          <tr valign="top">
             <th scope="row">reCAPTCHA Keys</th>
-            <td><input type="text" name="public_key" value="<?php echo options['public_key']; ?>" /></td>
+            <td><input type="text" name="public_key" value="<?php echo $options['public_key']; ?>" /></td>
          </tr>
       </table>
 
