removed a duplicate constant definition

--- a/settings.html
+++ b/settings.html
@@ -8,8 +8,12 @@
 
       <table class="form-table">
          <tr valign="top">
-            <th scope="row">reCAPTCHA Keys</th>
+            <th scope="row">Public Key</th>
             <td><input type="text" name="public_key" value="<?php echo $options['public_key']; ?>" /></td>
+         </tr>
+         <tr valign="top">
+            <th scope="row">Private Key</th>
+            <td><input type="text" name="private_key" value="<?php echo $options['private_key']; ?>" /></td>
          </tr>
       </table>
 
