--- a/settings.html
+++ b/settings.html
@@ -6,18 +6,45 @@
    <form method="post" action="options.php">
       <?php settings_fields('recaptcha_options_group'); ?>
 
+      <h4>Authentication</h4>
+      <p>These keys are required before you are able to do anything else. You can get them <a href="<?php echo recaptcha_get_signup_url($this->blog_domain(), 'wordpress');?>" title="Get your reCAPTCHA API Keys">here</a>.</p>
+      <p><strong>Note</strong>: Be <em>sure</em> not to mix them up! The public and private keys are not interchangeable!</p>
+      
       <table class="form-table">
          <tr valign="top">
             <th scope="row">Public Key</th>
-            <td><input type="text" name="recaptcha_options[public_key]" value="<?php echo $options['public_key']; ?>" /></td>
+            <td><input type="text" name="recaptcha_options[public_key]" size="40" value="<?php echo $this->options['public_key']; ?>" /></td>
          </tr>
          <tr valign="top">
             <th scope="row">Private Key</th>
-            <td><input type="text" name="recaptcha_options[private_key]" value="<?php echo $options['private_key']; ?>" /></td>
+            <td><input type="text" name="recaptcha_options[private_key]" size="40" value="<?php echo $this->options['private_key']; ?>" /></td>
          </tr>
+      </table>
+      
+      <table class="form-table">
          <tr valign="top">
-            <th scope="row">Enable reCAPTCHA for Comments</th>
-            <td><input type="checkbox" name="recaptcha_options[show_in_comments]" value="1" <?php checked('1', $options['show_in_comments']); ?> /></td>
+            <th scope="row"><h4>Comment Options</h4></th>
+            <td valign="middle">
+               <input type="checkbox" id ="recaptcha_options[show_in_comments]" name="recaptcha_options[show_in_comments]" value="1" <?php checked('1', $this->options['show_in_comments']); ?> />
+               <label for="recaptcha_options[show_in_comments]">Enable for comments</label>
+            </td>
+         </tr>
+         <!-- recaptcha bypass options -->
+         <tr valign="top">
+            <th scope="row">&nbsp;</th>
+            <td valign="middle">
+               <input type="checkbox" id="recaptcha_options[bypass_for_registered_users]" name="recaptcha_options[bypass_for_registered_users]" value="1" <?php checked('1', $this->options['bypass_for_registered_users']); ?> />
+               <label for="recaptcha_options[bypass_for_registered_users]">Hide for Registered Users who can</label>
+               <?php $this->capabilities_dropdown(); // <select> of capabilities ?>
+            </td>
+         </tr>
+         <!-- presentation options -->
+         <tr valign="top">
+            <th scope="row">&nbsp;</th>
+            <td valign="middle">
+               <label for="recaptcha_options[comments_theme]">Theme:</label>
+               <?php $this->theme_dropdown('comments'); ?>
+            </td>
          </tr>
       </table>
 
