created the admin notices for mailhide and created some anchors in the settings page for easy linking

--- a/settings.html
+++ b/settings.html
@@ -1,6 +1,7 @@
 <!-- do a referrer check here, or something, to ensure that this is only fetched/view from the administration interface
      if the user is an administrator -->
 <div class="wrap">
+   <a name="recaptcha"></a>
    <h2><?php _e('reCAPTCHA Options', 'recaptcha'); ?></h2>
    <p><?php _e('reCAPTCHA is a free, accessible CAPTCHA service that helps to digitize books while blocking spam on your blog.', 'recaptcha'); ?></p>
    
